--- a/bower.json
+++ b/bower.json
@@ -3,16 +3,18 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.3.0",
-    "bootstrap": "^3.2.0",
     "angular-animate": "^1.3.0",
     "angular-cookies": "^1.3.0",
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "angularfire": "~1.1.2",
+    "angular-bootstrap": "~0.13.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0",
+    "angular-bootstrap": "~0.13.1",
     "bootstrap": "~3.3.5"
   },
   "appPath": "app",
